# LambdaNat

./: .gitignore  README.md
LambdaNat0/: LambdaNat.cabal
LambdaNat0/app/: Main.hs
LambdaNat0/grammar/: LambdaNat0.cf
LambdaNat0/src/: Interpreter.hs
