cabal-version: 1.12

name:           LambdaNat
version:        0.1.0.0
description:    
homepage:       
bug-reports:    
author:         Samuel Balco
maintainer:     akurz@chapman.edu
copyright:      2019 Samuel Balco, Alexander Kurz
license:        BSD3
build-type:     Simple

executable LambdaNat
  main-is: Main.hs
  other-modules:
      Paths_LambdaNat
      AbsLambdaNat
      ErrM
      Interpreter
      LexLambdaNat
      ParLambdaNat
      PrintLambdaNat
  hs-source-dirs:
      app,src,test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , array
    , mtl
  default-language: Haskell2010

test-suite LambdaNat-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_LambdaNat
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , LambdaNat
    , filepath
    , directory
    , mtl
  default-language: Haskell2010
